# Unnamed

./: .clang-format  .gitignore  .gitmodules  README.md  REQUIREMENTS.txt  limine.conf
kernel/: CMakeLists.txt  x86_64_linker.ld
kernel/acpi/: acpi.cpp  acpi.hpp  glue.cpp  uacpi_io.cpp  uacpi_io.hpp
kernel/arch/x86_64/: cpu.hpp  exception_handlers.asm  gdt.asm  gdt.cpp  gdt.hpp  idt.asm  idt.cpp  idt.hpp  io.hpp  msr.hpp  registers.hpp
kernel/boot/x86_64/: entry.asm
kernel/cmake/: x86_64-flags.cmake
kernel/drivers/: clocksource.cpp  clocksource.hpp
kernel/kernel/: assert.hpp  bit_helpers.hpp  core.cpp  error.hpp  helpers.hpp  logger.cpp  logger.hpp  panic.cpp  percpu.cpp  percpu.hpp
kernel/kernel/irqs/: irqs.cpp  irqs.hpp
kernel/lib/: exception.hpp  memory.cpp  memory.hpp  ptr_array_wrapper.hpp  spinlock.cpp  spinlock.hpp  string.hpp  utils.hpp  vector.hpp
kernel/lib/cxx-runtime/: atexit.cpp  dso_handle.cpp  nothrow.cpp
kernel/lib/dlmalloc/: malloc.c  malloc.h
kernel/mm/: heap.cpp  heap.hpp  pma.cpp  pma.hpp  vma.cpp  vma.hpp  vmm.cpp  vmm.hpp
tools/: compile-limine.sh  create_iso.sh  download-required.sh  format-code.sh  run-kvm-x86_64.sh
